# marketing-automation-shanon-dwh

./: .envrc.sample  .gitignore  .tool-versions  GUIDLINE_MODELING.md  README.md  pyproject.toml  setup.md
dbt_worker/: .user.yml  dbt_project.yml  profiles.yml
dbt_worker/macros/: attribute_column_name_list.sql  attribute_column_unpivot_list.sql
dbt_worker/models/dimension/: _dim__shanon_enquete_attribute.yml  dim__shanon_enquete_attribute.sql
dbt_worker/models/fact/: _fct__shanon_enquete_answer.yml  fct__shanon_enquete_answer.sql
dbt_worker/models/mart/: PREREQUEST_ML_MODEL.md  _ml__summary_enquete_answer_review.yml  _obt__shanon_enquete_answer_detail.yml  ml__summary_enquete_answer_review.sql  obt__shanon_enquete_answer_detail.sql
dbt_worker/models/staging/: README.md  _stg__enquete_template.yml  _stg__enquete_template_attribute.yml  _stg__shanon_enquete_answer.yml  _stg__shanon_enquete_history.yml  _stg__shanon_enquete_template.yml  _stg__shanon_enquete_template_attribute.yml  _stg__shanon_lead.yml  source.yml  stg__enquete_template.sql  stg__enquete_template_attribute.sql  stg__shanon_enquete_answer.sql  stg__shanon_enquete_history.sql  stg__shanon_enquete_template.sql  stg__shanon_enquete_template_attribute.sql  stg__shanon_lead.sql
