[tool.poetry]
name = "marketing-automation-shanon-dwh"
version = "0.1.0"
description = ""
authors = ["masatoEmata"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "1.8.2"
dbt-bigquery = "1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
