[tool.poetry]
name = "marketing-automation-shanon-dwh"
version = "0.1.0"
description = ""
authors = ["masatoEmata"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12.0"
dbt-core = "1.8.2"
dbt-bigquery = "1.8.2"
dbt-osmosis = "^1.1.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
